feat: 终端窗口、IPC演示、打印机互斥演示
- 新增 TerminalWindow 交互式命令行组件（ps/launch/kill/suspend/resume/pause/step等命令）
- 终端不占进程槽，纯UI工具窗口
- 修复 pause/step 单步模式：tickForced()绕过paused检查
- 修复 TaskManager Kernel面板崩溃：加 ErrorBoundary
- 新增4个IPC/打印机演示应用：IPC-发送方、IPC-接收方、打印-先行者、打印-等待者
- CpuCore 实现 SEND/RECV/P_PRINTER/V_PRINTER 指令真实语义
- ProcessManager 注入 IpcCallback，completeProcess 释放打印机后唤醒等待进程

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>